--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -83,6 +83,9 @@
                             <md-menu-item>
                                 <md-button ng-disabled="item.type !== 'OBSERVATION'" ng-click="vm.viewSBTasklog(item)">View Dryrun</md-button>
                             </md-menu-item>
+                            <md-menu-item>
+                                <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="parent.vm.cloneSB(item)">Clone SB</md-button>
+                            </md-menu-item>
                         </md-menu-content>
                     </md-menu>
                 </div>
