--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -72,7 +72,7 @@
                         <span class="icon-button fa fa-ellipsis-v" md-ink-ripple style="padding: 6px" ng-click="$mdOpenMenu(); $event.stopPropagation()"></span>
                         <md-menu-content>
                             <md-menu-item>
-                                <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="item.editing = true">Edit Draft</md-button>
+                                <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="item.editing = true">Edit</md-button>
                             </md-menu-item>
                             <md-menu-item>
                                 <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="vm.editInstructionSet(item, $event)">Edit Instruction Set</md-button>
