--- a/app/scheduler/program-blocks/program-block-view.html
+++ b/app/scheduler/program-blocks/program-block-view.html
@@ -1,10 +1,12 @@
 <div flex layout="column" style="padding: 8px" md-theme="{{$root.themePrimary}}">
-    <md-toolbar style="margin-top: 8px" class="md-whiteframe-z1 md-toolbar-tools-medium"
+    <md-toolbar style="margin-top: 8px" class="md-whiteframe-z1 md-toolbar-tools"
         layout="row" layout-align="center center">
+        <input class="fade-in search-input-box" type="search" ng-model-options="{ debounce: 300 }" ng-model="vm.q"
+            placeholder="Search Program Blocks..." style="position: absolute; right: 4px; top: 4px; width: 200px; min-width: 200px"/>
         <div ng-include="'app/scheduler/templates/pb-view-header.html'"></div>
     </md-toolbar>
     <md-virtual-repeat-container flex class="md-whiteframe-z1" md-theme="{{$root.themePrimaryButtons}}">
-        <div md-virtual-repeat="pb in vm.programBlocks" class="pb-view-item" layout="row" ng-init="pb.showSBList = false"
+        <div md-virtual-repeat="pb in vm.programBlocks | regexSearch:vm.pbsOrderByFields:vm.q | orderBy:vm.pbsOrderBy.value:vm.pbsOrderBy.reverse" class="pb-view-item" layout="row" ng-init="pb.showSBList = false"
             layout-align="start center" style="cursor: pointer" ng-click="pb.showSBList = !pb.showSBList">
             <div layout="column" layout-align="center start" class="pb-id-container" ng-click="$root.showSBDetails(pb, $event, 'Program Block: ' + pb.pb_id)">
                 <span class="pb-id">{{pb.pb_id}}</span>
@@ -13,7 +15,7 @@
             <span flex class="sb-wrapped-description" style="height: initial">
                 {{pb.description}}
             </span>
-            <span style="max-width: 300px; min-width: 300px; margin-right: 8px; overflow: auto;" title="{{pb.obs_spec}}">{{pb.obs_spec}}</span>
+            <span class="pb-obs-spec-list-item" title="{{pb.obs_spec}}">{{pb.obs_spec}}</span>
             <span style="min-width: 80px; margin-right: 8px">{{pb.schedule_blocks.length}}</span>
             <span style="min-width: 80px">{{pb.state}}</span>
             <div layout="column" layout-align="center" class="sb-time-and-type-div" style="margin-left: 4px; min-width: 148px">
