--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -15,31 +15,39 @@
             </div>
         </div>
         <div flex class="resource-sensors-list" layout="column" style="max-height: 100%; min-height: 100%;">
-            <md-toolbar class="md-whiteframe-z1" style=" min-height: 60px">
-                <div layout="row" layout-align="start center" style="margin-left: 16px; margin-top: 16px">
+            <md-toolbar class="md-whiteframe-z1" style=" min-height: 60px" layout="row">
+                <div flex layout="row" layout-align="start center" style="margin-left: 16px">
                     <span flex>Sensors {{' - ' + vm.resourceSensorsBeingDisplayed | uppercase}}</span>
-                    <md-checkbox class="md-primary" ng-model="vm.hideNominalSensors" ng-click="$event.stopPropagation()" md-theme="{{themePrimaryButtons}}" style="font-size: 13px; margin: 0px 16px; padding: 0">
+                    <md-checkbox class="md-primary" ng-model="vm.showValueTimestamp" ng-click="$event.stopPropagation()" md-theme="{{themePrimaryButtons}}" style="font-size: 13px; margin: 0 4px; padding: 0"
+                        ng-change="vm.saveLocalStorage()">
+                        Show Value Timestamps
+                    </md-checkbox>
+                    <md-checkbox class="md-primary" ng-model="vm.hideNominalSensors" ng-click="$event.stopPropagation()" md-theme="{{themePrimaryButtons}}" style="font-size: 13px; margin: 0 4px; padding: 0">
                         Hide Nominal Sensors
                     </md-checkbox>
-                    <input class="fade-in search-input-box" type="search" ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Sensors..." />
+                    <input class="fade-in search-input-box" style="margin: 0 4px" type="search" ng-model-options="{ debounce: 300 }" ng-model="vm.q" placeholder="Search Sensors..." />
                 </div>
 
                 <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center" style="padding: 0px 8px; max-height: 17px">
                     <span class="subheader-text resource-sensor-name" ng-click="vm.setSensorsOrderBy('name')">
                         <span>Name</span>
-                    <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'name' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'name' && vm.sensorsOrderBy.reverse}" style="margin-right: 4px;"></span>
+                    <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'name' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'name' && vm.sensorsOrderBy.reverse}" style="margin-right: 4px"></span>
                     </span>
                     <span class="subheader-text resource-sensor-status-item" ng-click="vm.setSensorsOrderBy('status')">
                         <span>Status</span>
-                    <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'status' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'status' && vm.sensorsOrderBy.reverse}" style="margin-right: 4px;"></span>
+                    <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'status' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'status' && vm.sensorsOrderBy.reverse}" style="margin-right: 4px"></span>
                     </span>
                     <span class="subheader-text resource-sensor-time-item" ng-click="vm.setSensorsOrderBy('received_timestamp')">
                         <span>Received Timestamp</span>
-                    <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'received_timestamp' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'received_timestamp' && vm.sensorsOrderBy.reverse}" style="margin-right: 4px;"></span>
+                    <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'received_timestamp' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'received_timestamp' && vm.sensorsOrderBy.reverse}" style="margin-right: 4px"></span>
+                    </span>
+                    <span ng-show="vm.showValueTimestamp" class="subheader-text resource-sensor-time-item" ng-click="vm.setSensorsOrderBy('timestamp')">
+                        <span>Value Timestamp</span>
+                    <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'timestamp' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'timestamp' && vm.sensorsOrderBy.reverse}" style="margin-right: 4px"></span>
                     </span>
                     <span flex class="subheader-text" ng-click="vm.setSensorsOrderBy('value')">
                         <span>Value</span>
-                    <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'value' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'value' && vm.sensorsOrderBy.reverse}" style="margin-right: 4px;"></span>
+                    <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'value' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'value' && vm.sensorsOrderBy.reverse}" style="margin-right: 4px"></span>
                     </span>
                 </div>
             </md-toolbar>
@@ -55,6 +63,7 @@
                     <span title="{{sensor.python_identifier + ' - Description: ' + sensor.description + ' - Units: ' + sensor.units + ' - Type: ' + sensor.type}}" class="resource-sensor-name">{{sensor.name}}</span>
                     <span class="resource-sensor-status-item" ng-class="vm.sensorClass(sensor.status)">{{sensor.status}}</span>
                     <span class="resource-sensor-time-item">{{sensor.received_timestamp}}</span>
+                    <span class="resource-sensor-time-item" ng-show="vm.showValueTimestamp">{{sensor.timestamp}}</span>
                     <span title="{{sensor.value}}" class="resource-sensor-value-item" ng-click="vm.displaySensorValue($event, sensor); $event.stopPropagation();">{{sensor.value}}</span>
                     <!-- </div> -->
                 </div>
@@ -103,7 +112,7 @@
                     </md-menu-item>
                     <md-menu-item ng-if="vm.useFixedYAxis">
                         <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
-                            <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Min:</label>
+                            <label style="width: 53px; font-weight: normal; margin-top: 4px">Y Min:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px" class="md-primary" title="Set the desired Y-Axis Minimum Value">
                                 <input flex placeholder="Minimum" ng-model="vm.yAxisMinValue" ng-change="vm.showOptionsChanged()" type="number" ng-model-options="{ debounce: 300 }">
                             </md-input-container>
@@ -111,7 +120,7 @@
                     </md-menu-item>
                     <md-menu-item ng-if="vm.useFixedYAxis">
                         <div md-theme="{{themePrimaryButtons}}" layout="row" layout-align="start center" style="margin-left: 8px; margin-right: 8px; margin-bottom: 8px;">
-                            <label style="width: 53px; font-weight: normal; margin-top: 4px;">Y Max:</label>
+                            <label style="width: 53px; font-weight: normal; margin-top: 4px">Y Max:</label>
                             <md-input-container md-no-float style="margin-left: 8px;text-align: start; padding: 0; height: 30px" class="md-primary" title="Set the desired Y-Axis Maximum Value">
                                 <input flex placeholder="Maximum" ng-model="vm.yAxisMaxValue" ng-change="vm.showOptionsChanged()" type="number" ng-model-options="{ debounce: 300 }">
                             </md-input-container>
